This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
4/2/21: SEM_3-8-8
4/2/21: Fixed crash at end of STEM montage on systems with more than one
detector (In 3.8).

3/31/21: Added ability to use a monospaced font and to adjust
indentation more easily in script editor.

3/29/21: Fixed commands taking strings from the rest of the line for Python.

3/27/21: Improvements and changes in behavior for Python support; new plugins
available.

3/23/21: Python scripting now works, with plugins available.

3/22/21: Fixed dose-symmetric series in STEM mode to stop saving, restoring,
or adjusting intensity (In 3.8).

3/22/21: Stopped speed from being restored too soon when background tilting on
JEOL (In 3.8).

3/22/21: Fixed recording of diffraction focus on JEOL with continuous update
on (In 3.8).

3/21/14: Added flag to skip scale bar when snapshotting image window.

3/14/21: Allowed scale bar to be drawn on many processed images (In 3.8).

3/12/21: Fixed getting tilt sums during frame series when there is an energy
filter (In 3.8).

3/5/21: Added 64-bit HDF library for v140 64-bit build only; to run this
build, copy SerialEMLibs/x64/hdf5-14.dll to the executable directory or
somewhere on the path and rename it hdf5.dll.

3/5/21: Added a script command to present user with three choices.

3/2/21: Made changes to allow scripting to be done with an external script
interpreter embedded in a plugin.

3/2/21: Changed shifts for ReplaceFrameTSShifts to be in specimen coordinates
(In 3.8).

3/1/21:  SEM_3-9-0beta5
2/23/21: Added camera property to set delay from setting intensity to starting
acquisition.

2/22/21: Added options to use Search area to Autofocus script command.

2/22/21: SEM_3-8-7