@@ -544,7 +544,7 @@ MAC_SAME_NAME_NOARG(StartNavAcquireAtEnd, 0, 0, STARTNAVACQUIREATEND)
 MAC_SAME_NAME_ARG(SuffixForExtraFile, 1, 4, SUFFIXFOREXTRAFILE, Sssssss)
 MAC_SAME_NAME_ARG(ItemForSuperCoord, 1, 4, ITEMFORSUPERCOORD, I)
 MAC_SAME_NAME_NOARG(UpdateItemZ, 0, 4, UPDATEITEMZ)
-MAC_SAME_FUNC_NOARG(UpdateGroupZ, 0, 4, UpdateItemZ, UPDATEGROUPZ)
+MAC_SAME_FUNC_ARG(UpdateGroupZ, 0, 4, UpdateItemZ, UPDATEGROUPZ, i)
 MAC_SAME_NAME_NOARG(ReportGroupStatus, 0, 0, REPORTGROUPSTATUS)
 MAC_SAME_NAME_ARG(ReportItemImageCoords, 0, 4, REPORTITEMIMAGECOORDS, is)
 MAC_SAME_NAME_ARG(NewMap, 0, 0, NEWMAP, is)
