@@ -7,6 +7,8 @@ significance, for the stable release version
 4/2/21: Fixed crash at end of STEM montage on systems with more than one
 detector (In 3.8).
 
+3/31/21: Added optional entry to UpdateGroupZ to update the next item's group.
+
 3/31/21: Added ability to use a monospaced font and to adjust
 indentation more easily in script editor.
 
